# SphericalSnakeAgent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/: index.html  snake.js
game/: agent.js  agent_model.js  index.html  snake.js
src/agent/: env.py  export_onnx.py  features.py  train.py
tools/: README.md  agent_trace.py  compare_traces.py  package-lock.json  package.json  render_video.js  snake_trace.js  snake_trace.py
